tester/testsuite/good/simple_ite1.jl
int main() {
  boolean b = true;
  if (b) {
    printInt(17);
  } else {
    printInt(42);
  }
  return 0;
}
