tester/testsuite/bad/unbound_error.jl
int main() {
  x = true;
  return x;
}
